--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,6 +85,7 @@
 .align-center{
 	align-items:center;
 }
+
 .mentor h1 a{
 	text-decoration:none;
 	color:#5fcf80;
@@ -119,7 +120,8 @@
  
 /*----banner-----*/
 #banner .container {
-  padding-top: 72px;
+  padding-top: 232px;
+  margin:0 auto;
 }
 #banner{
 	background: url("../img/bg_img.png") top center;
@@ -127,26 +129,31 @@
 	background-attachment:fixed;
 	width:100%;
 	height:550px;
-	padding:200px 0px 150px 0px;
+	/* padding:200px 0px 0px 0px; */
 }
-#banner h1{
-  margin: 0;
-  font-size: 48px;
-  font-weight:800;
-  line-height: 56px;
-  color: #fff;
-  font-family: "Poppins", sans-serif;
+.bancon{
+	    display: contents;
+	text-align:center;
 }
+/* #banner h1{ */
+  /* margin: 0; */
+  /* font-size: 48px; */
+  /* font-weight:800; */
+  /* line-height: 56px; */
+  /* color: #fff; */
+  /* font-family: "Poppins", sans-serif; */
+/* } */
 #banner h2{
   color: #eee;
-  margin: 10px 0 0 18px;
-  font-size: 24px;
+  margin: 10px 0 0 0px;
+  font-size: 28px;
   font-family: "Raleway", sans-serif;
 }
-#banner h3{
+#banner h5{
   color: #eee;
-  margin: 10px 0 0 180px;
-  font-size: 24px;
+  /* margin: 10px 0 0 180px; */
+  padding-bottom:76px;
+  font-size: 18px;
   font-family: "Raleway", sans-serif;
 }
 
@@ -155,6 +162,10 @@
 /* banner */
 #about{
 	padding-top:70px;
+}
+.malzlogo{
+	width:60%;
+	height:auto;
 }
 .headings{
 	text-align:center;
@@ -179,7 +190,7 @@
 }
 .about-items h3 {
   font-weight:600;
-  font-size:22px;
+  font-size:20px;
   font-family: 'Poppins', sans-serif;
 }
 .about-items p{
@@ -204,13 +215,29 @@
 	font-size:25px;
 	padding:3px;
 }
+
+.video-wrap {
+  margin: 0 auto;
+  position: relative;
+  width: 90%;
+}
+.video-wrap:after {
+  border-bottom: 1px solid #fefefe00;
+  content: '';
+  display: block;
+  position: absolute;
+  width: 100%;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
+}
 /* about */
 
 /* *-------------------------------------------------------------- */
 /* # Contact */
 /* --------------------------------------------------------------*/ 
-.contact {
-  padding-top: 70px;
+#contact {
+  padding-top:70px;
   margin-bottom:30px;
 }
 
@@ -387,13 +414,28 @@
 /*----------------  Responsive --------------------- */
 
 @media (max-width:980px){
+	
+	#banner .container {
+  padding-top: 92px;
+  margin:0 auto;
+}
+	.malzlogo{
+	width:30%;
+	padding:10px 0px;
+	height:auto;
+}
+	.video-wrap {
+  margin: 0 auto;
+  position: relative;
+  width: 100%;
+}
 	.headtop{
-		width:100%;
+	width:100%;
 	flex:0 0 auto;
 	padding:0 15px;
 	}
 	.headtoptwo{
-		width:100%;
+	width:100%;
 	flex:0 0 auto;
 	padding:0 15px;
 	text-align:center;
@@ -430,8 +472,8 @@
 	background-size:cover;
 	background-attachment:fixed;
 	width:100%;
-	height:640px;
-	padding:80px 0px 20px 0px;
+	height:680px;
+	padding:120px 0px 20px 0px;
 	align-items:center;
 }
 #banner h1{
@@ -444,7 +486,7 @@
 }
 #banner h2{
   color: #eee;
-  margin: 150px 0 0 10px;
+  margin: 180px 0 0 10px;
   font-size: 30px;
   font-family: "Raleway", sans-serif;
 }
@@ -452,6 +494,13 @@
   color: #eee;
   margin: 40px 0 0 10px;
   font-size: 30px;
+  font-family: "Raleway", sans-serif;
+}
+#banner h5{
+  color: #eee;
+  /* margin: 10px 0 0 180px; */
+  padding-bottom:70px;
+  font-size: 12px;
   font-family: "Raleway", sans-serif;
 }
 .headings{
@@ -464,8 +513,8 @@
 	width:100%;
 	/* margin-top:100px; */
 }
-#about{
-	padding-top:70px;
+#about,#contact{
+	padding-top:90px;
 }
 .imgcon{
 	width:100%;
@@ -480,9 +529,7 @@
 .address2{
 	padding-top:30px;
 }
-.imagepradect{
-	height:auto;
-}
+
 .about-items ul{
 	list-style:none;
 	font-family: 'Poppins', sans-serif;
