--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,9 +10,9 @@
 .flex-container{
 	display:flex;
 	flex-wrap:wrap;
-	margin-left:-15px;
-	margin-right:-15px;
-	padding:0 15px;
+	/* margin-left:-15px; */
+	/* margin-right:-15px; */
+	/* padding:0 15px; */
 }
 .flex-item-1{
 	width:8.33%;
